# lab-pa-3

./: .gitignore  build-wasm.sh
frontend/: package.json  vite.config.ts
frontend/src/: App.css  App.module.css  App.tsx
frontend/src/components/: Cell.tsx  ControlPanel.tsx  GameResultModal.tsx  MobileToolbar.tsx  SpacingOverlay.tsx
frontend/src/hooks/: useAI.ts  useGame.ts  useInteractions.tsx
frontend/src/wasm/: aiWorker.ts  package.json  wasm_rust.d.ts  wasm_rust.js  wasm_rust_bg.wasm  wasm_rust_bg.wasm.d.ts
wasm/: CMakeLists.txt  board.h  constants.h  engine.cpp  engine.h  game.cpp  game.h  tictactoe.cpp  tictactoe.h
wasm-rust/: Cargo.toml
wasm-rust/src/: board.rs  constants.rs  engine.rs  game.rs  lib.rs
